--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,26 @@ APScheduler==3.8.1
 async-timeout==3.0.1
 attrs==21.4.0
 backports.zoneinfo==0.2.1
-chardet==4.0.0
+certifi==2021.10.8
+chardet==3.0.4
 discord==1.7.3
 discord.py==1.7.3
-idna==3.3
+googletrans==3.1.0a0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2021.12.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
 multidict==5.2.0
 psycopg2==2.9.3
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
+rfc3986==1.5.0
 six==1.16.0
+sniffio==1.2.0
 table2ascii==0.1.4
 typing_extensions==4.0.1
 tzdata==2021.5
